<?xml version="1.0" encoding="utf-8"?>
<!-- $_FOR_ROCKCHIP_RBOX_$ : modify by xubilv for USB device update-->
<resources>
    <string name="app_name">SystemUpdate</string>
    <string name="permlab_showUI">Show UI for firmware update.</string>
    <string name="permdesc_shwoUI">Show UI for firmware update.</string>
    
    <!-- Firmware updating dialog strings  -->
    <string name="updating_title">Firmware Updating</string>
    <string name="updating_message_formate">A update package file is found : \'%1$s\'. Would you like to install the package? </string>
    <string name="updating_button_install">Install</string>
    <string name="updating_button_cancel">Cancel</string>
    <string name="updating_prompt">Now is to check the package!Device is going to reboot and update firmware, please keep power on! </string>
    <string name="updating_prompt_sdcard">Do NOT remove SD card form the device!</string>

	<!-- Invalid Firmware Image Activity (IFIA)-->
    <string name="IFIA_title">Invalid firmware image</string>
    <string name="IFIA_msg">Found a invalid firmware image file \'%1$s\'. Would you like to delete it?</string>
    <string name="IFIA_btn_yes">Yes</string>
    <string name="IFIA_btn_no">No</string>
    
	
	<!-- No Image Activity (NIA)-->
    <string name="NIA_title">No update image file</string>
    <string name="NIA_msg_format">There is no firmware image file in directory \'%1$s\' and \'%2$s\'! </string>
    <string name="NIA_btn_ok">OK</string>
    <string name="NIA_btn_back">BACK</string>

    <!-- Storage Not  Enough Activity (SNE)-->
    <string name="SNE_title">Storage Memery is not enough</string>
    <string name="SNE_msg_format">The update file size is \'%1$s\'M , but there is \'%2$s\' M memery left in the storage!  </string>
    <string name="SNE_btn_ok">OK</string>

    
	<string name="ask_delete_package">Whether to delete upgrade package? It\'s safe to delete. If not,the system may once again hint for upgrade, which is inconvenience!</string>
	<string name="update_success">Congrats Upgrade  success!</string>
	<string name="update_failed">Sorry firmware update failed!</string>
	<string name="state_idle">State: Idle</string>
	<string name="downloading">Downloading</string>
	<string name="ota_update">Find an OTA upgrade package! do you want to update? upgrade package version: </string>
	<string name="ota_package_size">, size: </string>
	
	<string name="start">Start</string>
	<string name="starting">Starting</string>
	<string name="retry">Retry</string>
	<string name="pause">Pause</string>
	<string name="stoping">Stoping</string>
	
	<string name="cancel_update">Cancel Download</string>
	<string name="auto_check">Auto check update</string>
	<string name="check_now">Check now</string>
	<string name="no_package">Not found update package!!</string>
	<string name="network_error">Network Error!!</string>
	<string name="system_newer">System is newer!!</string>
	<string name="str_download">Download update</string>
	<string name="str_exit">Exit</string>
	
	<!-- Copy Image Error Activity (CIEA)-->
    <string name="CIEA_title">Copy image file</string>
    <string name="find_ota_update">Find a OTA upgrade package! do you want to update? upgrade package version: \'%1$s\' \'%2$s\'  \'%3$s\'</string>

    <string name="str_ota_new">New OTA upgrade package! Press "Download update" to download.</string>
    <string name="str_ota_no_new">There is no new OTA upgrade package.</string>
    <string name="str_ota_version">OTA package version:</string>
    <string name="str_ota_size">OTA package size:</string>
    <string name="str_downloading">Donwloading.</string>
    
    <!-- apk update -->
    <string name="check_update">Check update</string>
    <string name="new_version_text">Discovery of new version,Whether to update?</string>
    <string name="skip_this_version">Skip</string>
    <string name="update">Update</string>
    <string name="checking_version">Getting the latest version information...</string>
    <string name="latest_version">Your software is the latest version!</string>
    <string name="get_version_failed">Failed to get version information!</string>
    <string name="downloading_package">Downloading the installation package...</string>
    <string name="download_install">Download and install</string>
    <string name="download_failed">Download failed!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
