<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android_custom="http://schemas.android.com/apk/res/android.systemupdate.service"  
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg" 
    android:paddingTop="100dip">
    
    <!-- tip text -->
    <LinearLayout 
        android:layout_width="680dip"
        android:layout_height="280dip"
        android:orientation="vertical" 
        android:background="@drawable/bg_text"
        android:layout_gravity="center_horizontal">
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="5dip"
            android:text="@string/str_downloading"
            android:textSize="28dip"
            android:textColor="#FFFFFF"/>
        <TextView 
            android:id="@+id/text_ota_ver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="@string/str_ota_version"
            android:textSize="28dip"
            android:textColor="#FFFFFF"/>
        <TextView 
            android:id="@+id/text_ota_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="@string/str_ota_size"
            android:textSize="28dip"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    
    
    
    <!-- update/process/exit button -->
    <LinearLayout 
        android:layout_width="680dip"
        android:layout_height="180dip"
        android:orientation="horizontal" 
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/button_cancel" 
            android:layout_width="180dip" 
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="@string/cancel_update"
            android:textColor="#FFFFFF"
            android:textSize="24dp" 
            android:background="@drawable/button_state"/>
        
        <!-- ProgressBar 
            android:id="@+id/progress_horizontal"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="10" / -->
        
        
       <android.systemupdate.component.RoundProgressBar  
        android:id="@+id/progress_horizontal"
        android:layout_width="100dip"  
        android:layout_height="100dip" 
        android:layout_marginLeft="95dip" 
         android:layout_marginRight="95dip" 
        android:max="100"
        android:progress="0" 
          
          
        android_custom:roundColor="#4F7CEE"  
        android_custom:roundProgressColor="#0330E6"  
        android_custom:textColor="#FFFFFF"  
        android_custom:textIsDisplayable="true"  
        android_custom:roundWidth="10dip"  
        android_custom:textSize="20dip"/>  
    
        
        
        <Button
            android:id="@+id/btn_control" 
            android:layout_width="180dip" 
            android:layout_height="wrap_content"
            android:layout_marginRight="20dip"
            android:text="@string/start"
            android:textColor="#FFFFFF"
            android:textSize="24dp"
            android:background="@drawable/button_state" />
    </LinearLayout>
    
</LinearLayout>
